# Sentinel-Capital-A-Multi-Agent-Investment-Comittee

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
backend/: Dockerfile
backend/committee/: config.py  schemas.py
backend/committee/agents/: algo_engine.py  forecasting.py  macro.py  news_sentiment.py  technical.py
backend/committee/algo_engine/: __init__.py  ensemble.py  features.py  models.py  search.py
backend/committee/api/: main.py
backend/committee/audit/: report.py
backend/committee/baseline/: metrics.py  vectorbt_baseline.py
backend/committee/consensus/: orchestrator.py
backend/committee/debate/: contrarian.py  engine.py
backend/committee/discovery/: __init__.py  agent.py  config.py  data_provider.py  diversity.py  indicators.py  interfaces.py  registry.py  scanner.py  schemas.py  scoring.py  universe.py  utils.py
backend/committee/execution/: cost_model.py  portfolio.py
backend/committee/llm/: anthropic_client.py  gemini_client.py  openai_client.py  router.py
backend/committee/market_data/: breeze_client.py  context.py  news.py  prices.py
backend/committee/nlp/: preprocess.py
backend/committee/orchestration/: allocator.py  cycle.py  discovery_cycle.py  loop.py  watchlist.py
backend/committee/persistence/: db.py  models.py  repository.py
docs/: DEPLOYMENT.md  agents.md  api.md  architecture.md  setup.md
frontend/: Dockerfile  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json
frontend/public/: env-config.js
frontend/src/: api.ts  components.ts  env.d.ts  format.ts  main.ts  style.css  types.ts
reports/: Investment_Committee_Business_Briefing.html  Investment_Committee_Technical_Report.html
scripts/: compare_baseline.py  populate_breeze_codes.py  train_algo_engine.py  train_forecasting_model.py
(+41 files in other folders)
