[project]
name = "investment-committee"
version = "0.1.0"
description = "Autonomous Multi-Agent Investment Committee — Directional Confidence-Aware Consensus for intraday NSE/BSE paper trading"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "arch>=7.1",
    "yfinance>=0.2.44",
    "feedparser>=6.0",
    "httpx>=0.27",
    "google-generativeai>=0.8",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]
dl = [
    "torch>=2.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]
